Further work on DiagrammeR demo
- Add Rmarkdown examples for lifecycle and network diagram
- Update presentation

--- a/cites_trade.Rmd
+++ b/cites_trade.Rmd
@@ -1,58 +1,35 @@
+---
+title: "CITES trade networks in DiagrammeR"
+author: "Tamora James"
+date: "07/11/2017"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(DiagrammeR)
 library(RColorBrewer)
-
-## Colour palette
 pal <- brewer.pal(n = 8, "Dark2")
+```
 
-## CITES trade statistics derived from the CITES Trade Database, UNEP World Conservation Monitoring Centre, Cambridge, UK.
-citesData <- read.csv("data/comptab_Amazona_barbadensis_1975-2017.csv", stringsAsFactors = FALSE)
+CITES trade statistics are derived from the [CITES Trade Database, UNEP World Conservation Monitoring Centre, Cambridge, UK](https://trade.cites.org/en/cites_trade/).
+
+```{r data-import}
+citesData <- read.csv("data/comptab_Amazona_barbadensis_1975-2017.csv",
+                      stringsAsFactors = FALSE)
 desc <- "Trade in Amazona barbadensis 1975-2017"
+```
 
-glimpse(citesData)
+```{r node-setup}
+## Get list of unique node names for all trade roles
+node_names <- citesData %>% 
+  select(Importer, Exporter, Origin) %>% 
+  unlist(use.names = FALSE) %>% 
+  unique()
+node_names <- node_names[node_names != ""]
 
-## Origin is blank if the country of export is the country of origin, or if the country of origin is not reported
-citesDataOrigin <- filter(citesData, Origin != "")
-
-## Get nodes for each trade role
-importers <- citesData %>% select(Importer) %>% unique() %>% unlist(use.names = FALSE)
-exporters <- citesData %>% select(Exporter) %>% unique() %>% unlist(use.names = FALSE)
-originators <- citesDataOrigin %>% select(Origin) %>% unique() %>% unlist(use.names = FALSE)
-
-## Create importer nodes
-importer_nodes <-
-    create_node_df(
-        n = length(unique(citesData$Importer)),
-        type = "Importer",
-        label = unique(citesData$Importer),
-        style = "filled",
-        color = pal[1])
-
-## Create exporter nodes
-exporter_nodes <-
-    create_node_df(
-        n = length(unique(citesData$Exporter)),
-        type = "Exporter",
-        label = unique(citesData$Exporter),
-        style = "filled",
-        color = pal[2])
-
-## Create origin nodes
-origin_nodes <-
-    create_node_df(
-        n = length(unique(citesDataOrigin$Origin)),
-        type = "Origin",
-        label = unique(citesDataOrigin$Origin),
-        style = "filled",
-        color = pal[3])
-
-nodes <- combine_ndfs(exporter_nodes,
-                     importer_nodes,
-                     origin_nodes)
-
-## Simpler approach: create node data frame for all unique nodes
-node_names <- unique(c(importers,exporters,originators))
-
+## Create node data frame for trade nodes
 nodes <- create_node_df(
     n = length(node_names),
     type = node_names,
@@ -62,16 +39,21 @@ nodes <- create_node_df(
     importer = node_names %in% citesData$Importer,
     origin = node_names %in% citesData$Origin
 )
+head(nodes)
+```
 
+```{r edge-setup}
+## Create edges for each trade relationship
 edges_e <-
     create_edge_df(
         from = nodes$id[match(citesData$Exporter, nodes$type)],
         to = nodes$id[match(citesData$Importer, nodes$type)],
         rel = "export",
         data = citesData$Exporter.reported.quantity,
+        source = citesData$Source,
         penwidth = ifelse(is.na(citesData$Exporter.reported.quantity), 1,
                           log(citesData$Exporter.reported.quantity+1)),
-        color = pal[match(citesData$Term, unique(citesData$Term))]
+        color = pal[1]
     )
 
 edges_i <-
@@ -80,25 +62,18 @@ edges_i <-
         to = nodes$id[match(citesData$Importer, nodes$type)],
         rel = "import",
         data = citesData$Importer.reported.quantity,
+        source = citesData$Source,
         penwidth = ifelse(is.na(citesData$Importer.reported.quantity), 1,
                           log(citesData$Importer.reported.quantity+1)),
-        color = pal[match(citesData$Term, unique(citesData$Term))]
-    )
-
-edges_o <-
-    create_edge_df(
-        from = nodes$id[match(citesDataOrigin$Origin, nodes$type)],
-        to = nodes$id[match(citesDataOrigin$Exporter, nodes$type)],
-        rel = "origin",
-        color = "darkorchid",
-        penwidth = 1,
-        style = "dashed"
+        color = pal[2]
     )
 
 edges <- combine_edfs(edges_e,
-                      edges_i,
-                      edges_o)
+                      edges_i)
 
+head(edges)
+```
+```{r create-graph-1}
 cites_graph <- create_graph(nodes_df = nodes,
                             edges_df = edges
                             )
@@ -106,14 +81,19 @@ cites_graph <- create_graph(nodes_df = nodes,
 ## We get a crazy graph because there are many edges between some node pairs.
 render_graph(cites_graph,
              title = desc,
-             layout = "nicely"
+             layout = "neato"
              )
+```
 
+```{r}
 ## Filter to only reported imports
 cites_graph %>%
     select_edges(conditions = rel == "import") %>%
     render_graph()
 
+```
+
+```{r}
 ## To make the diagram more manageable, combine edges for trade between same countries (taking the maximum reported quantity)
 exportSummary <- citesData %>%
   group_by(Exporter, Importer) %>%
@@ -138,10 +118,5 @@ render_graph(cites_graph2,
              title = desc,
              layout = "nicely"  # options are: nicely, circle, tree, kk, and fr
 )
+```
 
-## TODO
-## Node size == connectedness (proportional to log(num direct trade links))
-## Node colour - geopolitical or other?
-## Arrow colour - source (e.g. captive-bred vs wild)? Would require alternative summary with grouping by source.
-## Year by year animation or split into pre- and post-CITES listing (1981)?
-## Remove XX node to avoid confusion
