--- a/diagrammer-intro.Rmd
+++ b/diagrammer-intro.Rmd
@@ -4,6 +4,12 @@ author: "Tamora James"
 date: 2017-11-07
 output: ioslides_presentation
 ---
+<style>
+pre {
+  font-size: 18px;
+  line-height: 25px;
+}
+</style>
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
@@ -12,19 +18,32 @@ library(DiagrammeR)
 
 ## About DiagrammeR
 
+- Created by Rich Iannone
 - Version `r packageVersion("DiagrammeR")`
 - Graph and network visualisation in R
 - Built-in layout engines:
     - **Graphviz (DOT)**
     - **mermaid**
-- Methods for graph creation and manipulation
+- Graph creation and manipulation in R
+
+## Using DiagrammeR with Graphviz
+```{r, echo = TRUE}
+grViz("digraph {
+node [shape = circle, width = 0.4];
+A->B
+A->D
+B->C
+D->E
+graph [rankdir = LR]
+}", height = 200)
+```
 
 ## Simple graph creation with Graphviz
 Can I recreate these diagrams from recent presentations?
 
 <div class="center">
-<img width="40%" style = "float:left" src="images/phylo_tree.png"/>
-<img width="60%" src="images/lifecycle_diagram.png"/>
+<img width="50%" style = "float:left" src="images/lifecycle_diagram.png"/>
+<img width="50%" src="images/bio-economic.png"/>
 </div>
 
 ## Recreating the lifecycle diagram
@@ -33,11 +52,20 @@ Can I recreate these diagrams from recent presentations?
 grViz("dot-lifecycle.gv")
 ```
 
-## Recreating the phylogenetic tree
-```{r phylotree-1}
-grViz("dot-phylotree.gv")
-```
+## Creating data-driven diagrams
+
+- Node data frame `create_node_df()`
+    - Node type/label
+    - Attributes for rendering e.g. colour, shape
+    - Other columns for associated data
+- Edge data frame `create_edge_df()`
+    - From/to node IDs
+    - Relationship
+    - Attributes for rendering e.g. colour, line width
+- Node and edge data frames can be combined: `combine_ndfs()`, `combine_edfs()`
 
 ## Documentation
 
 http://rich-iannone.github.io/DiagrammeR/
+
+> Warning: online documentation for graph creation/manipulation functions corresponds to a previous release!
